versioned_docs/version-2025.2.4/professor/josiane_paula_maltauro.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Josiane Paula Maltauro",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Artes II - 614",
          "size": 2,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Arte - 2452",
          "size": 1,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "sala_3-1",
          "students": [
            "COM2023"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Arte - 2452",
          "size": 1,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "sala_3-1",
          "students": [
            "COM2023"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Arte I - 1235",
          "size": 2,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "sala_02_-_cr_toledo",
          "students": [
            "IIW2024B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Metodologias Ativas - 2476",
          "size": 2,
          "teachers": [
            "Josiane Paula Maltauro",
            "Renato Lada Guerreiro",
            "Alex Miyamoto Mussi"
          ],
          "classroom": "",
          "students": [
            "EGE2024"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ],
  "teacherInfo": {
    "role": "Coordenadora do NAC",
    "officeHours": "Segunda-feira, das 16:00 às 17:00 e opcional na Terça-feira, das 13:10 às 14:00.",
    "workHours": ".",
    "notes": "Solicitações fora deste horário podem ser feitos por e-mail."
  }
}

# Josiane Paula Maltauro

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>


<div style={{
  border: '1px solid #ddd',
  borderRadius: '8px',
  padding: '16px',
  marginTop: '24px',
  backgroundColor: '#f9f9f9'
}}>
  <h2 style={{
    borderBottom: '2px solid #ccc',
    paddingBottom: '8px',
    marginBottom: '16px'
  }}>Informações do Docente</h2>
  <p><strong>Cargo/Função:</strong> {data.teacherInfo.role}</p>
  <p><strong>Horário de Atendimento aos Alunos:</strong> {data.teacherInfo.officeHours}</p>
  <p><strong>Observações:</strong> {data.teacherInfo.notes}</p>
</div>
